--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
         <li><a href="index.html">Nosotros</a></li>
         <li><a href="cepas.html">Productos</a></li>
         <li><a href="contacto.html" class="active">Contacto</a></li>
+        <li><button id="theme-toggle" class="theme-btn">🌙</button></li>
       </ul>
     </nav>
 
